--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
           <!-- Это то что отображается в названии вкладки браузера -->
-          <title>Gromova Olga</title>
+          <title>Gromova Anastasia</title>
 
 
 
@@ -79,7 +79,7 @@ novablackredwhite@mail.com
     </p></div><iframe width="100%" class="formatter youtube-iframe" src="
 
 
-      https://www.youtube.com/embed/bAgmGZ9iQ2Y?showinfo=0
+      https://www.youtube.com/embed/000?showinfo=0
 
 
       " frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><div class="carousel-fixed-item center"></div></div>
@@ -113,7 +113,7 @@ novablackredwhite@mail.com
     </p></div><iframe width="100%" class="formatter youtube-iframe" src="
 
 
-      https://www.youtube.com/embed/S3kwFCWLa2U?showinfo=0
+      https://www.youtube.com/embed/000?showinfo=0
 
 
       " frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><div class="carousel-fixed-item center"></div></div>
